--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "dependencies": {
-    "@rails/webpacker": "https://github.com/rails/webpacker"
+    "@rails/webpacker": "https://github.com/rails/webpacker",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "vue": "^2.5.21",
+    "vue-js-modal": "^1.3.28",
+    "vue-loader": "^15.5.1",
+    "vue-resource": "^1.5.1",
+    "vue-template-compiler": "^2.5.21",
+    "vue-turbolinks": "^2.0.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.1.14"
