--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "vue-resource": "^1.5.1",
     "vue-template-compiler": "^2.5.21",
     "vue-turbolinks": "^2.0.3",
+    "vuejs-datepicker": "^1.5.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
