--- a/config/database.yml
+++ b/config/database.yml
@@ -60,6 +60,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  username: azotanowy_pl
+  password: "oacmyxErWi"
   database: azotanowy_pl_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
@@ -84,5 +86,5 @@ test:
 production:
   <<: *default
   database: azotanowy_pl_production
-  username: azotanowy_pl
+  username: azotanowy_pl_production
   password: "<%= ENV.fetch("AZOTANOWY_PL_DATABASE_PASSWORD") %>"
